--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "directories": {},
   "scripts": {
     "test": "jasmine-node test/*.spec.js",
-    "min": "uglifyjs tlite.js --source-map tlite.min.js.map -m -c -o tlite.min.js && echo 'Minified size' && cat tlite.min.js | gzip -9f | wc -c"
+    "dev": "webpack",
+    "build": "webpack -p"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,16 @@
   },
   "homepage": "https://github.com/chrisdavies/tlite",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.0.15",
+    "css-loader": "^0.28.7",
+    "eslint": "^4.12.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "jasmine-node": "^1.14.5",
-    "uglifyjs": "^2.4.10"
+    "style-loader": "^0.19.0",
+    "webpack": "^3.10.0"
   }
 }
