Fix error when tooltip element is removed from parent node by something other than tlite.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "tlite",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Tiny tooltip utility",
   "main": "tlite.js",
   "directories": {},
   "scripts": {
     "test": "jasmine-node test/*.spec.js",
-    "min": "uglifyjs tlite.js --source-map tlite.min.js.map -m -c -o tlite.min.js && echo 'Minified size' && cat tlite.min.js | gzip -9f | wc -c"
+    "min": "uglifyjs tlite.js -m -c -o tlite.min.js && echo 'Minified size' && cat tlite.min.js | gzip -9f | wc -c"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,6 @@
   "homepage": "https://github.com/chrisdavies/tlite",
   "devDependencies": {
     "jasmine-node": "^1.14.5",
-    "uglifyjs": "^2.4.10"
+    "uglify-js": "^3.2.2"
   }
 }
